# phd-hub

./: .gitignore  comms-log.md  evaluate.py  fetch.py  pyproject.toml
data/: rmit_vn_2026-06-17.json
docs/: buertey_meeting_brief.md  build_pdf.sh  expanded_projects.md  pead_meeting_cheatsheet.md  pead_meeting_primer.md  phd_meeting_brief.md  poc_study_plan.md  worked_example.md
docs/cv/: build_cv_pdf.py
examples/: expanded_projects_scores.json  rmit_vn_scores.example.json
phd_hub/evaluation/: __init__.py  framework.md  loader.py  rubric.py
rmit_projects/fetchers/: rmit_vn.py
tests/: test_evaluation.py  test_rmit_vn.py
