[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phd-hub"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["requests>=2.31"]

[project.scripts]
fetch-projects = "fetch:main"

[tool.setuptools.packages.find]
include = ["phd_hub*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
